--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,22 @@
         <maven.compiler.release>23</maven.compiler.release>
         <exec.mainClass>com.mycompany.swingquest_ead_cw.SwingQuest_EAD_CW</exec.mainClass>
     </properties>
-
+    <dependencies>
+    <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>4.5.13</version>
+    </dependency>
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.12.3</version>
+    </dependency>
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <scope>test</scope>
+    </dependency>
+</dependencies>
 </project>
