--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <maven.compiler.release>23</maven.compiler.release>
         <exec.mainClass>com.mycompany.swingquest_ead_cw.SwingQuest_EAD_CW</exec.mainClass>
     </properties>
-    <dependencies>
+<dependencies>
     <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
@@ -19,13 +19,18 @@
     <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>2.12.3</version>
+        <version>2.15.2</version>
     </dependency>
     <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.12</version>
         <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>com.konghq</groupId>
+        <artifactId>unirest-java</artifactId>
+        <version>3.11.11</version>
     </dependency>
 </dependencies>
 </project>
